Change heading to 'Potential and Interviewed Candidates'

--- a/candidates.html
+++ b/candidates.html
@@ -359,7 +359,7 @@
                 </svg>
                 <span class="logo-text">VYSUS GROUP</span>
             </div>
-            <h1>Potential / Interviewed Candidates</h1>
+            <h1>Potential and Interviewed Candidates</h1>
             <div class="nav-links">
                 <a href="/index.html">Screening Guide</a>
                 <a href="/resume-analyzer.html">Resume Analyzer</a>
